Fix image source for Raul Viana in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="assets/suri.png" alt="Suri" class="logo-s">
                     <img src="assets/maori_logo.png" alt="Maori" class="logo-m">
                     <div class="leader-frame">
-                        <img src="assets/raul_viana.png" alt="Raul Viana">
+                        <img src="assets/raul.png" alt="Raul Viana">
                     </div>
                 </div>
                 <div id="general-data" class="header-stats"></div>
@@ -39,3 +39,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
